--- a/profile.css
+++ b/profile.css
@@ -104,7 +104,7 @@ body, html {
 .photo-frame img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .profile-photo-frame {
@@ -379,9 +379,10 @@ body::-webkit-scrollbar-thumb, .profile-container::-webkit-scrollbar-thumb {
     height: 100%;
     margin: 0;
     border-radius: 0;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
+
 
 .content {
     padding: 0;
