--- a/profile.css
+++ b/profile.css
@@ -104,11 +104,11 @@ body, html {
 .photo-frame img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: fill;
 }
 
 .profile-photo-frame {
-    max-width: 450px;
+    max-width: 350px;
 }
 
 .gallery-photo-frame {
@@ -379,10 +379,9 @@ body::-webkit-scrollbar-thumb, .profile-container::-webkit-scrollbar-thumb {
     height: 100%;
     margin: 0;
     border-radius: 0;
-    object-fit: contain;
+    object-fit: fill;
     display: block;
 }
-
 
 .content {
     padding: 0;
