--- a/assets_css/diverse.css
+++ b/assets_css/diverse.css
@@ -41,3 +41,12 @@
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
+
+.diverse-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
