--- a/changeslots/slot-panel.css
+++ b/changeslots/slot-panel.css
@@ -42,8 +42,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 20%;
-    height: 20%;
+    width: var(--plant-size, 90%);
+    height: var(--plant-size, 90%);
     transform: translate(-50%, -50%);
     object-fit: contain;
     pointer-events: none;
