--- a/assets_css/welcome.css
+++ b/assets_css/welcome.css
@@ -1,5 +1,5 @@
-@import url('mini-profile.css?v=<?=filemtime(__DIR__ . "/mini-profile.css")?>');
-@import url('farm-slots.css?v=<?=filemtime(__DIR__ . "/farm-slots.css")?>');
-@import url('../changeslots/slot-panel.css?v=<?=filemtime(__DIR__ . "/../changeslots/slot-panel.css")?>');
-@import url('../quickshop/quickshop.css?v=<?=filemtime(__DIR__ . "/../quickshop/quickshop.css")?>');
-@import url('../slotstype/slotstype.css?v=<?=filemtime(__DIR__ . "/../slotstype/slotstype.css")?>');
+@import url('mini-profile.css');
+@import url('farm-slots.css');
+@import url('../changeslots/slot-panel.css');
+@import url('../quickshop/quickshop.css');
+@import url('../slotstype/slotstype.css');
