--- a/assets_css/barn.css
+++ b/assets_css/barn.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     padding: 20px;
     box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
-    background: url('../img/bg.png') center/cover no-repeat;
+    background: url('../img/bg2.png') center/cover no-repeat;
 }
 
 .barn-header {
