--- a/assets_css/template.css
+++ b/assets_css/template.css
@@ -16,10 +16,13 @@ body, body *:not(input):not(textarea):not(select) {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 img {
     -webkit-user-drag: none;
+    -webkit-touch-callout: none;
 }
 
 .app-frame {
