--- a/assets_css/mini-profile.css
+++ b/assets_css/mini-profile.css
@@ -95,6 +95,17 @@
     text-align: center;
 }
 
+.helper-total {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    font-size: 0.6em;
+    padding: 1px 3px;
+    border-radius: 3px;
+}
+
 .achievements-card {
     display: flex;
     align-items: center;
