--- a/assets_css/farm-slots.css
+++ b/assets_css/farm-slots.css
@@ -95,6 +95,7 @@
     font-weight: bold;
     border-radius: 3px;
     display: none;
+    text-shadow: 1px 1px 2px #000; /* umbră subțire neagră */
 }
 
 .slot-overlay {
