--- a/assets_css/mini-profile.css
+++ b/assets_css/mini-profile.css
@@ -10,16 +10,18 @@
     max-width: calc(4 * var(--slot-size, 60px) + 3 * var(--slot-gap, 1px));
     padding: 5px;
     box-sizing: border-box;
+    height: var(--slot-size, 60px);
 }
 
 .mini-profile {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     background: url('../img/bg2.png') center/cover no-repeat;
-    padding: var(--slot-gap, 1px);
+    padding: 0;
     border: 1px solid #000;
     box-shadow: none;
     width: calc(2 * var(--slot-size, 60px) + var(--slot-gap, 1px));
+    height: calc(var(--slot-size, 60px) - 4px);
     max-width: 100%;
     position: relative;
     box-sizing: border-box;
@@ -27,9 +29,9 @@
 
 .mini-profile-avatar, .profile-avatar {
     width: var(--slot-size, 60px);
-    height: var(--slot-size, 60px);
+    height: 100%;
     object-fit: cover;
-    margin-right: var(--slot-gap, 1px);
+    margin-right: 0;
     background: url('../img/bg2.png') center/cover no-repeat;
     border: 1px solid #000;
     box-shadow: none;
@@ -41,7 +43,7 @@
 .mini-profile-card,
 .mini-card {
     width: var(--slot-size, 60px);
-    height: var(--slot-size, 60px);
+    height: calc(var(--slot-size, 60px) - 4px);
     background: url('../img/bg2.png') center/cover no-repeat;
     border: 1px solid #000;
     box-shadow: none;
@@ -141,6 +143,7 @@
 
 .avatar-wrapper {
     position: relative;
+    height: 100%;
 }
 
 .level-circle {
